<resources>
    <string name="app_name">BottonNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_fortune">Fortune</string>
    <string name="signName">sign</string>
    <string name="signName1">Aries</string>
    <string name="signName2">Taurus</string>
    <string name="signName3">Gemini</string>
    <string name="signName4">Cancer</string>
    <string name="signName5">Leo</string>
    <string name="signName6">Virgo</string>
    <string name="signName7">Libra</string>
    <string name="signName8">Scorpion</string>
    <string name="signName9">Sagittarius</string>
    <string name="signName10">Capricorn</string>
    <string name="signName11">Aquarius</string>
    <string name="signName12">Pisces</string>
    <string name="job">Work luck</string>
    <string name="money">Money luck</string>
    <string name="love">Love luck</string>
    <string name="total">Overall evaluation</string>
    <string name="advice">advice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="advice_message" translatable="false">Don\'t blame yourself if your work doesn\'t go as planned. It is important to switch to tomorrow. Let\'s relax at night.</string>
    <string name="app_login_name">welcome to sky</string>
    <string name="nav_home">home page</string>
    <string name="title_signbook">constellation handling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>